--- a/room-web-app/src/main/resources/application.properties
+++ b/room-web-app/src/main/resources/application.properties
@@ -1,4 +1,8 @@
-logging.level.org.springframework.jdbc.datasource.init.ScriptUtils=debug
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+server.port=7712
+#spring.application.name=
+#spring.sql.init.mode=always
+spring.sql.init.platform=postgres
+spring.datasource.url=jdbc:postgresql://localhost:5432/dev
+spring.datasource.username=postgres
+spring.datasource.password=postgres
 spring.jpa.hibernate.ddl-auto=none
